--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ charset-normalizer==3.4.0
 Django==4.2.10
 django-extensions==3.2.3
 djangorestframework==3.15.2
+drf-yasg==1.21.7
 google-ai-generativelanguage==0.6.10
 google-api-core==2.23.0
 google-api-python-client==2.153.0
@@ -21,11 +22,13 @@ proto-plus==1.25.0
 protobuf==5.28.3
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
+python-decouple
 pydantic==2.9.2
 pydantic_core==2.23.4
 pyparsing==3.2.0
 requests==2.32.3
 rsa==4.9
+setuptools>=65.5.1
 sqlparse==0.4.4
 tqdm==4.67.0
 typing_extensions==4.12.2
